# fuzz

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  fuzzer.rs  lib.rs  main.rs  parallel.rs  persistent_fuzzer.rs
src/corpus/: entry.rs  mod.rs  scheduler.rs  storage.rs
src/coverage/: bitmap.rs  breakpoint.rs  mod.rs  report.rs  sancov.rs
src/crash/: dedup.rs  mod.rs  triage.rs
src/executor/: fork.rs  mod.rs  persistent.rs
src/minimizer/: mod.rs
src/mutation/: block.rs  dictionary.rs  havoc.rs  interesting.rs  mod.rs  strategies.rs
src/stats/: mod.rs  ui.rs
test_targets/: Makefile  deep_crash  deep_crash.c  null_deref.c  overflow.c  timeout.c
tests/: integration.rs
