[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"
description = "Coverage-guided fuzzer"
license = "MIT"
authors = ["Katie"]

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
nix = { version = "0.27", features = ["signal", "ptrace", "process"] }
memmap2 = "0.9"
rand = "0.8"
sha2 = "0.10"
rusqlite = { version = "0.30", features = ["bundled"] }
ratatui = "0.26"
crossterm = "0.27"
goblin = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
rand_chacha = "0.3"
